--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -29,6 +30,8 @@
 body {
   background: #070708;
   color: #fff;
+  font-family: 'Cairo', sans-serif;
+  direction: rtl;
 }
 
 input,
