--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,12 @@ textarea {
 }
 
 .btn-profile-menu {
-  padding: 2px 7px;  background-color: #5f2476; border-radius: 5px;
+  padding: 2px 7px;
+  background-color: #5f2476;
+  border-radius: 5px;
+  display: flex;
+  gap: 5px;
+  flex-direction: row-reverse;
 }
 .sections-contact{
   position: relative;
