--- a/src/index.css
+++ b/src/index.css
@@ -141,7 +141,7 @@ textarea {
     margin: 0;
   }
   .page-product-propertes-one {
-    margin-right: 38px;
+    margin-left: 45px;
     width: 185px !important;
   }
  #rating , #comment {
