--- a/src/index.css
+++ b/src/index.css
@@ -140,7 +140,7 @@ textarea {
     padding: 10px;
     margin: 0;
   }
-   .page-product-propertes-one {
+   .page-product-propertes {
 
     flex-direction: column;
   } 
