--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,7 @@ textarea {
   .page-single-products {
     padding: 10px;
     margin: 0;
+    margin-bottom: 107px;
   }
    .page-product-propertes {
 
