--- a/src/index.css
+++ b/src/index.css
@@ -107,9 +107,9 @@ textarea {
     transform: translate(-50%, -50%);
     padding: 0 50px;
   }
-  /* .page-order-info {
-    margin-right: 340px;
-  } */
+   .page-order-info {
+   margin: 0 50px;
+  } 
 }
 @media (max-width:600px) {
 
