--- a/src/index.css
+++ b/src/index.css
@@ -226,6 +226,9 @@ table {
 .brand-serialnumber{
   margin: 150px 15px;
 }
+.margine-btn-phone {
+  margin-bottom: 150px;
+}
 }
 
 
@@ -308,8 +311,8 @@ table {
 
   .containar-filter {
     position: absolute;
-    right: -70px;
-    top: -15px;
+    right: -81px;
+    top: -71px;
     display: block;
     display: flex;
     flex-direction: row-reverse;
