--- a/src/index.css
+++ b/src/index.css
@@ -109,7 +109,7 @@ textarea {
     padding: 0 50px;
   }
    .page-order-info {
-   margin: 0 50px;
+    margin: 0 239px 0 0 ;
   } 
 }
 @media (max-width:600px) {
