--- a/src/index.css
+++ b/src/index.css
@@ -307,9 +307,8 @@ table {
   }
 
   .list-filter {
-    position: relative;
     z-index: 39;
-    position: absolute;
+    position: fixed;
     transition: 0.8s;
   }
 
