--- a/src/pages/Auth/Navigation.css
+++ b/src/pages/Auth/Navigation.css
@@ -1,8 +1,7 @@
 #navigation-container {
   width: auto;
   transition: width 0.9s ease-in-out;
-  overflow: hidden; 
-
+  overflow: hidden;
 }
 
 #navigation-container:hover {
@@ -11,7 +10,7 @@
 
 .nav-item-name {
   display: none;
-  transition: opacity 0.2s ease-in-out; 
+  transition: opacity 0.2s ease-in-out;
 }
 
 #navigation-container:hover .nav-item-name {
@@ -22,7 +21,7 @@
 .search-input {
   display: none;
   opacity: 0;
-  transition: opacity 0.2s ease-in-out; 
+  transition: opacity 0.2s ease-in-out;
 }
 
 #navigation-container:hover .search-input {
@@ -32,36 +31,34 @@
 
 #navigation-container:hover .search-icon {
   display: none;
-  transition: opacity 0.2s ease-in-out; 
+  transition: opacity 0.2s ease-in-out;
 }
 
-@media (max-width:1600px) {
+@media (max-width: 1600px) {
   #navigation-container {
     width: 100%;
     overflow: hidden;
     height: auto;
     bottom: 0px;
     justify-content: space-between;
-}
-  
+  }
+
   #navigation-container:hover {
     width: 100%;
   }
-  
 
   .nav-item-name {
     display: block;
-    transition: opacity 0.2s ease-in-out; 
+    transition: opacity 0.2s ease-in-out;
     font-size: 10px;
     margin: 0;
   }
-  
+
   .search-input {
     display: none;
     opacity: 0;
-    transition: opacity 0.2s ease-in-out; 
+    transition: opacity 0.2s ease-in-out;
   }
-  
 
   .icone-menu-home {
     margin: 0;
@@ -78,7 +75,8 @@
     margin-bottom: 10px;
   }
 
-  .navigation-container-menu  a  , .navigation-container-menu-other{
+  .navigation-container-menu a,
+  .navigation-container-menu-other {
     display: flex;
     flex-direction: column;
   }
@@ -90,7 +88,5 @@
     flex-wrap: nowrap;
     background-color: black;
     bottom: 0;
-}
-
-  
+  }
 }
